assets/base.css
/* ... */
#webi-main-cart-footer .cart__ctas{
    display: flex;
    gap: 10px;
    margin-top: 12px;
}
#webi-main-cart-footer .cart__ctas .button{
    width: 50%;
}
#webi-main-cart-footer .totals{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
#webi-main-cart-footer .totals p,#webi-main-cart-footer .totals h3{
    margin: 0;
}
#webi-main-cart-footer .totals h3{
    font-size: 20px;
}
.wbheadcartdrop .loading-overlay:not(.hidden) ~ *{
    visibility: hidden;
}
#cart-icon-bubble .cart__empty-text{
    text-align: center;
    font-size: 18px;
    margin: 0;
    font-weight: normal;
}
/* Language/ Currency */
.localization-form .button {
    padding: 1rem;
}
.localization-form__currency {
    display: inline-block;
}
.localization-form__select {
    position: relative;
    color: #fff;
}
noscript .localization-form__select {
    padding-left: 0rem;
}
.localization-selector.link {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    padding: 0;
    height: auto;
}
.localization-selector.link:hover {
    color: var(--gradient-base-accent-1);
}
.localization-form .disclosure__button:hover svg {
    fill: var(--gradient-base-accent-1);
}
noscript .localization-selector.link {
    padding-top: 1.5rem;
    padding-left: 1.5rem;
}
.localization-selector option {
    color: var(--color-base-text);
}
.localization-selector + .disclosure__list {
    opacity: 1;
    animation: animateLocalization var(--duration-default) ease;
}
@keyframes appear-down {
    0% {
        opacity: 0;
        margin-top: -1rem;
    }
    100% {
        opacity: 1;
        margin-top: 0;
    }
}

@keyframes animateLocalization {
    0% {
        opacity: 0;
        transform: translateY(0);
    }

    100% {
        opacity: 1;
        transform: translateY(-1rem);
    }
}
/* Language/ Currency End */



/* Arrows */
.slick-slider .slick-next, .slick-slider .slick-prev{
    display: inline-block;
    vertical-align: middle;
    position: absolute;
    top: -56px;
}
.slick-slider .slick-prev{
    right: 55px;
    left: auto;
}
.slick-slider .slick-next{
    right: 15px;
}
.slick-slider .slick-next::before, .slick-slider .slick-prev::before{
    display: none;
}
.slick-slider .slick-arrow {
    background-color: #f5f5f5;
    transition: 0.3s ease;
    display: inline-block;
    text-align: center;
    border: none;
    border-radius: 4px;
    font-size: 22px;
    text-transform: uppercase;
    min-width: 36px;
    min-height: 36px;
    color: var(--color-base-text);
    transition: 0.3s ease;
}
.slick-slider .slick-arrow:hover{
    background-color: var(--color-wbmaincolors-text);;
}
.slick-slider .slick-arrow:hover svg{
    fill: var(--gradient-base-accent-1);
}
.slick-slider .slick-arrow svg{
    width: 18px;
    height: 17px;
    fill: var(--color-wbmaincolors-text);
    position: relative;
    top: -3px;
}
/* Slick Dots */
.slick-slider .slick-dots{
    position: unset;
}
/* Slider */
.s-panel{
    position: relative;
}
.s-panel .wrloader {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 999;
}
.slick-dotted.slick-slider {
    margin-bottom: 0;
} 
.s-panel .slick-dots{
    position: absolute;
    left: 0;
    right: 0;
    bottom: 15px;
    text-align: center;
}
.slick-dots li{
    margin: 0 2px;
}
.slick-dots li button::before{
    font-size: 44px;
}
.s-panel {
    margin-top: 15px;
}
.s-panel,.sliderel{
    position: relative;
}
.s-panel .allslideprt {
    margin: 0;
}
.s-panel .slider__slide {
    padding: 0;
}
.slidertext{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 8%;
    width: 700px;
    display: flex;
    align-items: center;
    text-align: left;
}
.slideff{
    position: relative;
    overflow: hidden;
    transform: unset;
    opacity: 1;
    transition: opacity 0.5s 0.7s,-webkit-transform 0.5s 0.7s;
}
.s-panel .slick-current.slick-active .slideff{
    transform: none;
    opacity: 1;
}
.slidertext img,.toptext img {
    display: inline-block;
    vertical-align: middle;
}
.slidertext h3,.toptext h3 {
    font-size: 14px;
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    text-transform: uppercase;
    font-weight: 600;
    color: var(--color-background);
}
.slidertext h2{
    font-size: 70px;
    text-transform: capitalize;
    color: var(--color-wbmaincolors-text);
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 1.1;
}
.slidertext p{
    font-size: 14px;
    color: var(--color-background);
    margin: 0;
    text-transform: capitalize;
    line-height: 24px;
}
.slidertext a.btn{
    margin-top: 50px;
    padding: 20px 70px;
    text-transform: capitalize;
    border-radius: 64px;
    font-size: 16px;
    font-weight: 500;
    background: var(--color-wbmaincolors-text);
    color: var(--color-background);
}
.slidertext a.btn svg {  
    width: 24px;
    height: 24px;
    margin-left: 30px;
    fill: var(--color-background);  
}  
.toptext a.btn svg {
    width: 24px;
    height: 24px;
    margin-left: 30px;
    fill: var(--color-wbmaincolors-text);
}
.slidertext a.btn:hover svg,.toptext a.btn:hover svg {
    fill: var(--color-background);
}
.s-panel .slick-slider .slick-arrow {
    position: unset;
    background: transparent;
    min-width: 26px;
    min-height: 26px;
    display: contents;
}
.s-panel .slick-dots {
    left: 10%;
    width: auto;
    right: auto;
    bottom: 30px;
}
.s-panel .slick-slider .slick-arrow.slick-next {
    transform: rotateY(180deg);
}
.s-panel .slick-dots li button::before {
    font-size: 22px;
    color: var(--color-background);
    opacity: 1;
}
.s-panel .slick-dots li.slick-active button:before,.s-panel .slick-dots li button:focus:before,.s-panel .slick-dots li button:hover:before {
    color: var(--color-wbmaincolors-text);
}
/*lookbook*/
.wblbook .rless {
    margin-right: 0;
    margin-left: 0;
}
.wblbook .cless {
    padding-left: 0;
    padding-right: 0;
}
/* ... */

